force-app/main/default/objects/Integration_Log__c/fields/Log_Type__c.field-meta.xml
<CustomField>
    <fullName>Log_Type__c</fullName>
    <label>Log Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Teams App</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>