force-app/main/default/objects/Integration_Log__c/fields/Method_Type__c.field-meta.xml
<CustomField>
    <fullName>Method_Type__c</fullName>
    <label>Method Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>POST</fullName>
            </value>
            <value>
                <fullName>PUT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>