force-app/main/default/objects/Integration_Log__c/fields/Team_Members__c.field-meta.xml
<CustomField>
    <fullName>Team_Members__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team Members</label>
    <referenceTo>Team_Members__c</referenceTo>
    <relationshipLabel>Integration Logs</relationshipLabel>
    <relationshipName>Integration_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>