force-app/main/default/objects/Integration_Log__c/fields/Teams__c.field-meta.xml
<CustomField>
    <fullName>Teams__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Teams</label>
    <referenceTo>Teams__c</referenceTo>
    <relationshipLabel>Integration Logs</relationshipLabel>
    <relationshipName>Integration_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>